# dsa

./: CLAUDE.md  README.md  additional-content.md  main.py  prompt.md  pyproject.toml  run_server.py
.backup/: .env.example  README.md  demo.py  design.md  done.md  plan.md  start.py
.backup/backend/: __init__.py  database.py  main.py  models.py
.backup/backend/routes/: ai_tutor.py  mappings.py  problem_summary.py  problems.py  progress.py
.backup/data/: categories_index.json  difficulty_index.json  patterns_index.json  problem_mappings.json  problems_database.json
.backup/docs/: design.md  done.md  raw-striver-a2z.html
.backup/frontend/: index.html  package.json
.backup/frontend/src/: main.tsx
.backup/frontend/src/components/: ProblemDetail.tsx  ProblemList.tsx
.backup/frontend/src/hooks/: api.ts
.backup/frontend/src/pages/: App.tsx
.backup/scripts/: build_problem_mappings.py  fetch_striver_a2z.py  process_striver_problems.py
api/: main.py  models.py  services.py
api/routers/: coverage.py  planning.py  topics.py
data/: a2z_structure.json  cpp_analysis.json  index.jsonl  mapping.jsonl  python_analysis.json  study_plan_14day.json
docs/: design.md  done.md  frontend_design.md  plan.md
frontend/: index.html
frontend/assets/css/: style.css
frontend/assets/js/: app.js  charts.js  components.js
scripts/: analyze_repos.py  build_a2z_structure.py  build_index.py  coverage_checker.py  study_plan_generator.py
